@@ -7,39 +7,37 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.Serializable;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 import java.util.function.Consumer;
 
 //TODO Upgrade algorithm to min/max with alpha-beta pruning
 //TODO Write tests because behaves weird
-//TODO consider moving pieces values (ex. pawn = 1) to this class since pieces should not be responsible for the algorithm
+//TODO consider moving pieces values (ex. pawn = 1) to this class since pieces should not be responsible for this algorithm
 
 /**
- * Un player qui utilise un algorithm pour trouver le prochain meilleur moves.
- * L'algorithme est un algorithm recursif min-max qui utilise les valeurs des pièces (chaque pièce à une sequenceValue)
+ * This player uses an algorithm to find the best next move.
+ * The algorithm is a recursive min-max algorithm that uses the relative value of each move to evaluate the best move
  *
- * Il existe deux niveaux de difficulté (facile et difficile)
+ * There are two difficulty levels (Easy and Hard) they change the search depth of the algorithm
  */
 public class PlayerComputer extends Player {
-    //Les niveaux de difficultés
+    //The difficulty levels
     public static final Difficulty EASY = new Difficulty(3, "Facile");
     public static final Difficulty HARD = new Difficulty(4, "Difficile");
 
     /**
-     * Le niveau de difficulty du player
+     * The difficulty level of the current instance of this player
      */
     private final Difficulty difficulty;
 
     /**
-     * Le game data
+     * The game data
      */
     @Nullable
     private GameData gameData;
 
     /**
-     * @param difficulty la difficulté de l'algorithme
+     * @param difficulty the difficulty level for the algorithm
      */
     public PlayerComputer(Difficulty difficulty) {
         this.difficulty = difficulty;
@@ -51,9 +49,7 @@ public class PlayerComputer extends Player {
     }
 
     /**
-     * Retourne le moves qui retourne le plus de points
-     *
-     * @param callback la méthode par laquelle l'on soumet son prochain moves
+     * Calculates the best move and returns it via the callback.
      */
     @Override
     public void getMove(Consumer<Move> callback, Colour colour) {
@@ -67,22 +63,23 @@ public class PlayerComputer extends Player {
 
     @NotNull
     private MoveSequence calculateBestMove(MoveSequence pastSequence, Colour colour) {
-        //Si on est déjà à la profondeur maximale retourner
+        //If we've reached the max depth return the current sequence
         if (pastSequence.getLength() == difficulty.searchDepth) return pastSequence;
 
-        //Calculer les moves possibles
-        Collection<Move> possibleMoves = gameData.getAllLegalMoves(colour);
+        //Calculate all the possible moves
+        Collection<Move> possibleMoves = gameData.getPossibleLegalMoves(colour);
 
+        //The best move
         MoveSequence bestMove = null;
 
         for (Move move : possibleMoves) {
-            move.apply(gameData); //Appliquer le moves
+            move.apply(gameData); //Apply the move to the data
 
-            //Calculer la sequenceValue du moves (partie récursive)
+            //Calculate the value of this move (using recursion)
             MoveSequence moveSequence = calculateBestMove(new MoveSequence(pastSequence, move), getOppositeColour(colour));
 
-            //Si le moves est meilleur que bestMove remplacer bestMove
-            //Si le moves à la même sequenceValue, remplacer 50% du temps
+            //If the move is better than bestMove update bestMove.
+            //If the move is equal to bestMove update bestMove 50% of the time (to allow for variation)
             if (bestMove == null) {
                 bestMove = moveSequence;
             } else {
@@ -99,40 +96,37 @@ public class PlayerComputer extends Player {
                 }
             }
 
-            move.undo(gameData); //Défaire les changements
+            move.undo(gameData); //Undo changes
         }
 
         return bestMove == null ? pastSequence : bestMove;
     }
 
     /**
-     * Si blanc retourne noir et vice-versa
-     *
-     * @param colour la colour à getOppositeColour
-     * @return la colour inversée
+     * @return the opposite colour (used to switch turns)
      */
     private Colour getOppositeColour(Colour colour) {
         return colour == Colour.WHITE ? Colour.BLACK : Colour.WHITE;
     }
 
     /**
-     * Une classe qui représente une série de moves et la sequenceValue de la série
+     * An object representing a series of moves and its value
      */
     private class MoveSequence {
-        private final List<Move> moves;
+        private final LinkedList<Move> moves;
 
         /**
-         * La somme de la sequenceValue de toutes les pièces
+         * The sum of the value of each move
          */
         private final int sequenceValue;
 
         MoveSequence() {
             this.sequenceValue = 0;
-            this.moves = new ArrayList<>();
+            this.moves = new LinkedList<>();
         }
 
         private MoveSequence(MoveSequence moveSequence, Move move) {
-            this.moves = new ArrayList<>(moveSequence.moves);
+            this.moves = new LinkedList<>(moveSequence.moves);
             this.moves.add(move);
             this.sequenceValue = moveSequence.sequenceValue + move.getValue();
         }
@@ -146,19 +140,19 @@ public class PlayerComputer extends Player {
         }
 
         Move getFirstMove() {
-            return moves.get(0);
+            return moves.getFirst();
         }
     }
 
     /**
-     * La difficulté de l'algorithm (dépendant de la profondeur)
+     * The difficulty of the algorithm. Has a search depth and a name
      */
     private static class Difficulty implements Serializable {
         private final int searchDepth;
         private final String name;
 
-        Difficulty(int profondeur, String name) {
-            this.searchDepth = profondeur;
+        Difficulty(int searchDepth, String name) {
+            this.searchDepth = searchDepth;
             this.name = name;
         }
     }
